--- a/content/money/passive-income-protfolio/202006.zh-cn.md
+++ b/content/money/passive-income-protfolio/202006.zh-cn.md
@@ -9,6 +9,9 @@ description: "被动收入投资组合2020年06月月报"
 categories: [
     "被动收入投资组合"
 ]
+aliases: [
+    "/money/passive-income-portfolio-202006/"
+]
 ---
 
 ## 个人收入三驾马车
