--- a/content/money/passive-income-protfolio/202007.zh-cn.md
+++ b/content/money/passive-income-protfolio/202007.zh-cn.md
@@ -89,11 +89,8 @@ categories: [
 
 ### YouTube
 
-{{< youtube id="_GElBEi3R_I" autoplay="false" >}}
+{{< youtube id="i-ZgBCnHsgg" autoplay="false" >}}
 
 ### bilibili
 
-{{< bilibili 883647341 >}}
-
-#### *References*
-[^0]: 
+{{< bilibili 969022897 >}}
