add post /money/passive-income-protfolio/202101

--- a/content/money/passive-income-protfolio/202006.zh-cn.md
+++ b/content/money/passive-income-protfolio/202006.zh-cn.md
@@ -152,3 +152,7 @@ isCJKLanguage: true
 #### *References*
 [^0]: [三驾马车](https://wiki.mbalib.com/wiki/%E4%B8%89%E9%A9%BE%E9%A9%AC%E8%BD%A6)
 [^1]: [美股近150年回报率分析:"时间"真的能换来"空间"](https://finance.sina.com.cn/stock/usstock/c/2019-03-14/doc-ihrfqzkc3824417.shtml)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
