--- a/content/money/passive-income-protfolio/202007.zh-cn.md
+++ b/content/money/passive-income-protfolio/202007.zh-cn.md
@@ -95,3 +95,8 @@ isCJKLanguage: true
 ### bilibili
 
 {{< bilibili 969022897 >}}
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
+
