--- a/content/money/passive-income-protfolio/202008.zh-cn.md
+++ b/content/money/passive-income-protfolio/202008.zh-cn.md
@@ -110,3 +110,7 @@ isCJKLanguage: true
 ![](https://img.bmpi.dev/3d7c4cf5-9d9c-294f-4fad-8d48c6415444.png)
 
 关于组合的详细信息见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
