--- a/content/money/passive-income-protfolio/202009.zh-cn.md
+++ b/content/money/passive-income-protfolio/202009.zh-cn.md
@@ -42,7 +42,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前大多数指数基金都处于空仓仓位，如果你采用此交易策略，那可以躲过这次大的跌幅。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [Invest Alchemy](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 大跌时我们能做什么
 
@@ -77,3 +77,7 @@ isCJKLanguage: true
 ![](https://img.bmpi.dev/c518abca-8e73-ab0e-b447-a5ce1bd99bc5.png)
 
 关于组合的详细信息见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
