--- a/content/money/passive-income-protfolio/202010.zh-cn.md
+++ b/content/money/passive-income-protfolio/202010.zh-cn.md
@@ -38,7 +38,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前大多数指数基金都处于持仓仓位，但是由于市场处于震荡整理行情，所以双均线会出现短期买入并卖出的信号干扰。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [Invest Alchemy](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 投资交易的心理建设
 
@@ -100,3 +100,7 @@ isCJKLanguage: true
 ![](https://img.bmpi.dev/7f74d594-53f9-8e35-33a5-53ae3066ee9e.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
