--- a/content/money/passive-income-protfolio/202011.zh-cn.md
+++ b/content/money/passive-income-protfolio/202011.zh-cn.md
@@ -38,7 +38,7 @@ isCJKLanguage: true
 
 从双均线交易信号看，目前持有的大部分是估值处于中部的标的。从趋势交易的角度看目前值得持有的都是一些中低估值的标的。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [Invest Alchemy](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 关于银行分期贷款的坑
 
@@ -85,3 +85,7 @@ isCJKLanguage: true
 ![](https://img.bmpi.dev/883799c1-f06f-35c1-45b8-1ac6c7a85db1.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
