--- a/content/money/passive-income-protfolio/202012.zh-cn.md
+++ b/content/money/passive-income-protfolio/202012.zh-cn.md
@@ -82,7 +82,7 @@ isCJKLanguage: true
 
 如果你分析下双均线策略信号最近两个月的表现，会发现双均线在趋势行情中表现还是很不错的。对于高估值的标的如创业板、消费与医药，双均线在上月底还是空仓状态，躲过上个月的大跌，又吃到了这个月的大涨。
 
-> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [Invest Alchemy](https://money.i365.tech/)
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 组合表现
 
@@ -107,3 +107,7 @@ isCJKLanguage: true
 ![](https://img.bmpi.dev/c151eeba-fe32-6f77-de95-bd1717a9e8f7.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
+
+### 投资组合管理服务
+
+我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
