fix og image missing

--- a/content/money/passive-income-protfolio/202102.zh-cn.md
+++ b/content/money/passive-income-protfolio/202102.zh-cn.md
@@ -10,6 +10,7 @@ categories: [
     "被动收入投资组合"
 ]
 isCJKLanguage: true
+og_image: "https://img.bmpi.dev/28a8c22b-f064-8846-2f58-17f3d9749be2.png"
 ---
 
 ## 重新思考估值策略
