--- a/content/money/passive-income-protfolio/202103.zh-cn.md
+++ b/content/money/passive-income-protfolio/202103.zh-cn.md
@@ -10,7 +10,7 @@ categories: [
     "被动收入投资组合"
 ]
 isCJKLanguage: true
-og_image: ""
+og_image: "https://img.bmpi.dev/2d2c4058-cb37-fc64-2ffa-8dc21a4d1765.png"
 ---
 
 ## 长期投资之难
