--- a/content/money/passive-income-protfolio/202104.zh-cn.md
+++ b/content/money/passive-income-protfolio/202104.zh-cn.md
@@ -1,7 +1,7 @@
 ---
-title: " # 组合月报(202104)"
+title: "家庭资产配置的阶段 # 组合月报(202104)"
 date: 2021-05-04
-draft: true
+draft: false
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -13,8 +13,29 @@ isCJKLanguage: true
 og_image: "https://img.bmpi.dev/1d2f4d18-7168-2123-1e61-0fa186ba21b2.png"
 ---
 
+## 家庭资产配置的阶段
 
+![](https://img.bmpi.dev/5e384320-faad-e3ef-9ab5-4b024d25a99d.png)
 
+如果一个家庭的资产配置全部是现金，这一定是极不健康的资产配置类型。考虑到现代家庭至少有套住房，如果全部是现金估计是在准备买房的阶段，但又不会投资，所以这是一种特殊时期过渡阶段的资产配置。
+
+![](https://img.bmpi.dev/5426f332-fc55-ec86-66e9-67bbbbcc3510.png)
+
+这可能是很多家庭的资产配置类型，拥有一套住房，但是没有投资能力且剩余资金没法投资房产。这种资产配置的类型很容易被金融放水稀释掉，这次疫情各大央行疯狂放水，变相的稀释了很多这类家庭的资产。
+
+![](https://img.bmpi.dev/f2ab11a9-2802-c747-f048-78bd6a6ecfd9.png)
+
+这类家庭资产配置拥有住宅，且不会投资，但是由于资金多可以投资房产。房产可以抗通货膨胀，所以这类家庭资产的配置是正常的。只是目前房产投资困难重重，房产的流动性也差，多套房产管理成本也高。
+
+![](https://img.bmpi.dev/94130420-3f36-a163-df0d-c39813300d63.png)
+
+这类家庭资产配置属于会投资但是资金不足以投资房地产（可能是政策原因导致）。金融资产如股票基金在长期时间范围可以有效的低于通货膨胀，流动性也不错，这是一种健康的家庭资产配置类型。
+
+![](https://img.bmpi.dev/d7452e6c-d34a-985c-4cb9-b0917e388c90.png)
+
+这种家庭资产配置属于理想类型。之前的几种家庭资产配置都可以朝着这个方向努力。拥有居住房产且部分资金用来投资房产（可以利用房贷杠杆），另外一部分资金用来投入股票基金这类流动性好的金融资产，配置了一部分现金储蓄资产以备家庭急需（一般达到 6 个月的家庭支出即可），最后可以拿出 10% 的家庭资产投机一些高风险的品种如加密货币。
+
+读者可以看看自己的家庭资产属于哪个阶段，可以留言交流。
 ## 组合月报
 
 本月净值：1.522。
@@ -29,9 +50,15 @@ og_image: "https://img.bmpi.dev/1d2f4d18-7168-2123-1e61-0fa186ba21b2.png"
 
 ![](https://img.bmpi.dev/d749586d-9fd4-388a-5081-630ba0ddf37c.png)
 
+创业板再次爆发（反弹？），月涨幅达 12%，你大爷还是你大爷，不得不服。
+
 ![](https://img.bmpi.dev/4f76a87f-bf97-1668-cbf6-ff2524c2602f.png)
 
+被动收入投资组合本月收益垫底，看来我又成为反向指标，买了一堆便宜不涨的品种（恒生、银行、地产、能源、军工）。之所以这么操作还是因为按照我的交易规则，在低估的品种重仓。
+
 ![](https://img.bmpi.dev/a8034d27-c3fa-d58a-55f9-f01f0cd2c400.png)
+
+医药和创业板暴涨，但是被动收入组合持仓太少了。
 
 ### 双均线策略信号(截止21.04.30交易信号)
 
@@ -88,6 +115,8 @@ H股ETF(510900.SH)于20210305日卖出, 空仓55天, 空仓期涨幅-3.18%
 中国互联(164906.SZ)于20210305日卖出, 空仓55天, 空仓期涨幅-6.94%
 中概互联(513050.SH)于20210303日卖出, 空仓57天, 空仓期涨幅-11.46%
 ```
+
+双均线策略再次捕捉到了医药和创业板的暴涨，持仓盈利近 10%。我在思考要不要在高估值的品种只采取双均线这类趋势跟随的策略？因为一般投资品种在高估值大多经历了暴涨，在这个阶段波动区间很大，趋势跟随策略的表现应该很好。
 
 > 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
