--- a/content/money/passive-income-protfolio/202105.zh-cn .md
+++ b/content/money/passive-income-protfolio/202105.zh-cn .md
@@ -1,7 +1,7 @@
 ---
-title: "家庭资产配置的阶段 # 组合月报(202105)"
-date: 2021-06-06
-draft: true
+title: "慢慢变富 # 组合月报(202105)"
+date: 2021-06-05
+draft: false
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -13,11 +13,30 @@ isCJKLanguage: true
 og_image: "https://img.bmpi.dev/783874d4-8d93-7bd9-115e-61985b9fbf2a.png"
 ---
 
+## 慢慢变富
+
+**何以解忧？唯有暴富！**
+
+不知何时起，在微信聊天群经常会看到类似的对话。很多人寄希望于暴富来解决生活中的各种烦恼。在十几年前这种行为体现在买彩票上，而现在体现在各类炒币的行为上。
+
+这让我想起在我上高中的县城，也发生过类似的事情。当时的大环境是县城发现了大量的优质煤，由于国内房地产市场蓬勃的发展带来了发电量的巨大需求，而国内电力还是火电为主，所以刺激了煤价的大幅上涨。这个变化带来的是县城某些区域的人暴富了，当时我们家居住的小镇里本地人有家庭获得高达上千万的补偿费用，还有每年的分红，甚至来本地开发的公司承诺给本地人每年收入二、三十万年收入的工作。而县城里也发生了翻天覆地的变化，实施了全民免费医疗和教育。一切看起来都超美好的方向发展，直到金融危机的爆发。
+
+危机的来源已经不清楚了，只是很多人的钱消失在了民间借贷的泥潭里了。一个直接的原因是当大家暴富后，开始玩来钱更快的借贷游戏，两分贷款来的钱四分放出去，躺着赚大钱。没有人能拒绝这种诱惑，虽然是高利贷，但是很多人都在玩，最终这个雷在煤价大跌后炸了，而煤价大跌直接原因是用电需求量大幅降低，根源是房地产发展势头降低。
+
+金融危机后，县城里最忙的就是法院，最赚钱的就是律师。法官根本不够用，法院里人满为患。伤害最深的是人们之间信任崩塌，欠钱的就算能还得起的也不愿意还钱，再也不敢有人给别人借钱了。甚至镇子上人常说的一句话就是：路上开路虎的都比打工的人穷，连油也加不起。
+
+暴富能解决生活的烦恼吗？在我看来的确能解决一些烦恼，但是会带来新的烦恼。比如县城里的人暴富后生活质量的确高了不少，大家都能开得起豪车，喝得起茅台了。但是因喝酒开车出事的人变多了很多，离婚的也变多了很多，因金融危机破产的也很多。这些幸福的烦恼在我们没有暴富前可能根本不是问题。
+
+更深层的原因是暴富的人的认知升级无法赶得上财富增长的速度，因这种矛盾被财富反噬的人不少。当然我也知道一些聪明人，在金融危机来临之前将财富转移到省会投资房地产，而当时省会的房子很便宜。能做出这些决策的人的认知是能匹配上他的财富增速，所以才能在关键的时刻做出正确的决策。而当时县城很多普通人的投资能力并不能让他们做出正确的决策。
+
+而近来流行的炒币行为也让不少人暴富了，很多人仅仅是运气好暴富，这些财富只是经他的手流转了一次，同时反噬了他普通的生活。武侠小说里修行一门顶级的武功一定要求修炼者有很深的内功修为，少林寺的顶级武学一定要求学习者有很深的佛学修为。
+
+在我看来投资也是一门顶级的技术，要求学习者有很深的财富认知能力。所以何以解忧？我的答案就是**长期投资，慢慢变富。**
 ## 组合月报
 
 本月净值：1.561。
 
-本月操作：本月买入0笔,卖出11笔。
+本月操作：本月买入 0 笔，卖出 11 笔。
 
 组合详情：投资标的：各类ETF，包括宽基指数、行业指数等；投资市场：中国、香港及美国。
 
@@ -83,19 +102,21 @@ H股ETF(510900.SH)于20210305日卖出, 空仓84天, 空仓期涨幅-6.28%
 纳指ETF(159941.SZ)于20210507日卖出, 空仓21天, 空仓期涨幅-0.92%
 ```
 
+> 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
+
 ### 组合表现
 
 ![](https://img.bmpi.dev/783874d4-8d93-7bd9-115e-61985b9fbf2a.png)
 
 > 组合自2018年09月开启至今：
 > 
-> 沪深300自3310.13点到5331.57点，涨幅61.06%；
+> 沪深300自 3310.13 点到 5331.57 点，涨幅 61.06%；
 > 
-> 香港恒指自26435.67点到29151.8点，涨幅10.27%；
+> 香港恒指自 26435.67 点到 29151.8 点，涨幅 10.27%；
 > 
-> 标普指数自2930.75点到4204.11点，涨幅43.44%；
+> 标普指数自 2930.75 点到 4204.11 点，涨幅 43.44%；
 > 
-> **本投资组合净值从1到1.561 ,涨幅56.1%。**
+> **本投资组合净值从 1 到 1.561 ,涨幅 56.1%。**
 ### 组合持仓
 
 
@@ -110,4 +131,3 @@ H股ETF(510900.SH)于20210305日卖出, 空仓84天, 空仓期涨幅-6.28%
 ### 投资组合管理服务
 
 我计划开设一个投资组合管理付费服务，感兴趣的朋友可以阅读这篇 [投资组合管理服务](/invest/) 。
-
