--- a/content/money/passive-income-protfolio/202105.zh-cn.md
+++ b/content/money/passive-income-protfolio/202105.zh-cn.md
@@ -1,7 +1,7 @@
 ---
 title: "慢慢变富 # 组合月报(202105)"
 date: 2021-06-05
-draft: false
+draft: true
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -31,7 +31,7 @@ og_image: "https://img.bmpi.dev/783874d4-8d93-7bd9-115e-61985b9fbf2a.png"
 
 而近来流行的炒币行为也让不少人暴富了，很多人仅仅是运气好暴富，这些财富只是经他的手流转了一次，同时反噬了他普通的生活。武侠小说里修行一门顶级的武功一定要求修炼者有很深的内功修为，少林寺的顶级武学一定要求学习者有很深的佛学修为。
 
-在我看来投资也是一门顶级的技术，要求学习者有很深的财富认知能力。所以何以解忧？我的答案就是**长期投资，慢慢变富。**
+在我看来投资也是一门顶级的技术，要求学习者有很深的财富认知能力。所以何以解忧？我的答案就是**长期投资，认知升级，慢慢变富。**
 ## 组合月报
 
 本月净值：1.561。
