--- a/content/money/passive-income-protfolio/202105.zh-cn.md
+++ b/content/money/passive-income-protfolio/202105.zh-cn.md
@@ -1,7 +1,7 @@
 ---
 title: "慢慢变富 # 组合月报(202105)"
 date: 2021-06-05
-draft: false
+draft: true
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
