--- a/content/money/passive-income-protfolio/202106.zh-cn.md
+++ b/content/money/passive-income-protfolio/202106.zh-cn.md
@@ -165,7 +165,7 @@ og_image: ""
 
 ### 结果分析
 
-测试指数共 25 个。市场涵盖A股、香港及美国市场。类型涵盖宽基、行业及主题指数。
+测试指数共 25 个。测试周期跨度近 15 年（起码两次牛熊周期）。市场涵盖A股、香港及美国市场。类型涵盖宽基、行业及主题指数。
 
 #### 超越复合年化 15% 收益的指数
 
@@ -184,9 +184,55 @@ og_image: ""
 - 中证红利(000922.SH)：双均线策略。
 - 中证白酒(399997.SZ)：长期持有策略。
 
+在 25 个测试标的中，有 14 个指数长期收益超过了 15%，这说明指数的长期收益率比不少股票、房地产的收益率要高，而且选择的难度也很低，知名的指数里随便选就有超过一半的概率选到一个收益率很不错的指数。
+
 #### 双均线策略表现好于长期持有策略的指数
 
-#### 令人奇怪的结果
+- 上证50(000016.SH)：双均线收益率 / 长期持有收益率 = 1.7
+- 沪深300(000300.SH)：双均线收益率 / 长期持有收益率 = 1.6
+- 中证500(000905.SH)：双均线收益率 / 长期持有收益率 = 1.9
+- 创业板(399006.SZ)：双均线收益率 / 长期持有收益率 = 1.9
+- 全指信息(000993.SH)：双均线收益率 / 长期持有收益率 = 1.9
+- 中证金融(000934.SH)：双均线收益率 / 长期持有收益率 = 1.2
+- 中证电信(000936.SH)：双均线收益率 / 长期持有收益率 = 1.4
+- 中证工业(000930.SH)：双均线收益率 / 长期持有收益率 = 3.4
+- 中证材料(000929.SH)：双均线收益率 / 长期持有收益率 = 3.7
+- 中证公用(000937.SH)：双均线收益率 / 长期持有收益率 = 2.0
+- 中证能源(000928.SH)：双均线收益率 / 长期持有收益率 = 6.0
+- 中证传媒(399971.SZ)：双均线收益率 / 长期持有收益率 = 3.2
+- 中证1000(000852.SH)：双均线收益率 / 长期持有收益率 = 1.9
+- 中证环保(000827.SH)：双均线收益率 / 长期持有收益率 = 1.2
+- 中证军工(399967.SZ)：双均线收益率 / 长期持有收益率 = 2.3
+- 中证红利(000922.SH)：双均线收益率 / 长期持有收益率 = 1.7
+
+在 25 个测试标的中，有 16 个指数双均线策略收益要高于长期持有策略。甚至在中证能源上收益比能达 6 倍之巨，说明了双均线策略的有效性。
+
+#### 适合双均线策略的指数
+
+取前两个分析结果的交集并对策略收益比相差低于 1.5 的去除（中证金融、中证电信）后得出适合双均线策略的指数清单：
+
+- **中证500(000905.SH)**
+- **创业板(399006.SZ)**
+- **全指信息(000993.SH)**
+- **中证工业(000930.SH)**
+- **中证材料(000929.SH)**
+- **中证1000(000852.SH)**
+- **中证军工(399967.SZ)**
+- **中证红利(000922.SH)**
+
+#### 一些结论
+
+- 双均线清单中没有但是收益巨大的指数有中证消费与中证医药，说明双均线策略不适合长期大牛的指数，对于此类指数拿着长期持有就行了；
+- 在长期收益超越 15% 收益的指数里没有香港及美国市场的指数，说明 A 股没有那么不堪，在 A 股赚不到钱的股民很可能都是短线玩家；
+- 对于周期性行业指数要谨慎，如中证能源在 07 年大牛市中赚取耀眼的收益后，因能源市场低迷一路走低至今；
+- 宽基指数中 500 与 1000 值得长期投资，行业指数中科技、医药、消费值得长期投资，主题指数中红利指数值得长期投资；
+- 不要希望双均线策略稳赢，在下行趋势中双均线策略只能降低亏损而无法扭亏为盈，在下行趋势中最好的策略就是不买入，但难点在于如何从微观上的交易感知到宏观上的大趋势；
+- 双均线策略交易次数并不多，在 15 年时间跨度中，一般只有不到 100 次的交易，平均下来两个月才交易一次；
+- 以上结论可能全错，根据历史预测未来很可能是一场幻觉，为了降低这种幻觉带来的致命打击，我们还需要通过分散投资降低这类系统性的风险。
+
+#### 一个问题
+
+买入时间点对双均线策略有何影响？比如调整以上筛选出的八个指数的买入时间，将买入时间设置到牛市的高峰或熊市的低谷对收益率有何影响？下期我们再探讨这个话题。
 
 ## 组合月报
 
