--- a/content/money/passive-income-protfolio/202106.zh-cn.md
+++ b/content/money/passive-income-protfolio/202106.zh-cn.md
@@ -1,6 +1,6 @@
 ---
 title: "适合趋势跟随策略的指数 # 组合月报(202106)"
-date: 2021-06-18
+date: 2021-07-03
 draft: true
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
@@ -236,9 +236,9 @@ og_image: ""
 
 ## 组合月报
 
-本月净值：1.561。
+本月净值：1.573。
 
-本月操作：本月买入 0 笔，卖出 11 笔。
+本月操作：本月买入 0 笔，卖出 0 笔。
 
 组合详情：投资标的：各类ETF，包括宽基指数、行业指数等；投资市场：中国、香港及美国。
 
@@ -246,87 +246,114 @@ og_image: ""
 
 ### 三地市场分析
 
-![](https://img.bmpi.dev/aa186ffd-6dbf-53ac-ea3d-f63c01871def.png)
+![](https://img.bmpi.dev/f560d2dd-64c9-8349-21e8-e961b49074ce.png)
 
-![](https://img.bmpi.dev/2ba383bc-e383-5645-672d-aa91e8bd2e28.png)
+![](https://img.bmpi.dev/7ab3f17d-bdf6-ff83-e128-4937e4a839f2.png)
 
-![](https://img.bmpi.dev/713b953d-1c50-7b5a-3a12-ae30af082823.png)
-
-### 双均线策略信号(截止21.05.31交易信号)
+![](https://img.bmpi.dev/a8c76233-58bb-9ea6-1e95-ffd916c4731b.png)
+### 双均线策略信号(截止21.06.30交易信号)
 
 ```
+================Long ETF=================
+可买标的:
+#########################################
+可卖标的:
+#########################################
 持仓标的:
-创业板50(159949.SZ)于20210402日买入, 持有56天, 盈利16.24%
-金融ETF(159931.SZ)于20210520日买入, 持有8天, 盈利3.24%
-金融ETF(510230.SH)于20210517日买入, 持有11天, 盈利3.82%
-非银ETF(512070.SH)于20210521日买入, 持有7天, 盈利6.28%
-城投ETF(511220.SH)于20210318日买入, 持有71天, 盈利1.41%
-消费ETF(159928.SZ)于20210401日买入, 持有57天, 盈利8.13%
-可选消费(159936.SZ)于20210525日买入, 持有3天, 盈利0.99%
-医药行业(510660.SH)于20210331日买入, 持有58天, 盈利14.09%
-医药ETF(512010.SH)于20210331日买入, 持有58天, 盈利12.47%
-医药(159938.SZ)于20210331日买入, 持有58天, 盈利12.65%
-医药ETF(159929.SZ)于20210331日买入, 持有58天, 盈利13.3%
-石油基金(160416.SZ)于20210510日买入, 持有18天, 盈利-1.62%
-南方原油(501018.SH)于20210415日买入, 持有43天, 盈利2.02%
-华宝油气(162411.SZ)于20210510日买入, 持有18天, 盈利1.2%
-能源ETF(159930.SZ)于20210413日买入, 持有45天, 盈利7.94%
-商品ETF(510170.SH)于20210413日买入, 持有45天, 盈利10.49%
-地产ETF(512200.SH)于20210525日买入, 持有3天, 盈利0.95%
-信息技术(159939.SZ)于20210526日买入, 持有2天, 盈利1.28%
-传媒ETF(512980.SH)于20210524日买入, 持有4天, 盈利0.61%
-传媒ETF(159805.SZ)于20210521日买入, 持有7天, 盈利1.42%
-万家红利(161907.SZ)于20210324日买入, 持有65天, 盈利9.85%
-银行ETF(512800.SH)于20210430日买入, 持有28天, 盈利5.55%
-富国1000(161039.SZ)于20210524日买入, 持有4天, 盈利5.46%
-1000ETF(512100.SH)于20210520日买入, 持有8天, 盈利3.35%
-500ETF(510500.SH)于20210401日买入, 持有57天, 盈利6.24%
-300ETF(510300.SH)于20210521日买入, 持有7天, 盈利3.84%
-中小板(159902.SZ)于20210524日买入, 持有4天, 盈利2.13%
-深100ETF(159901.SZ)于20210521日买入, 持有7天, 盈利2.99%
-180ETF(510180.SH)于20210521日买入, 持有7天, 盈利4.23%
-创业板(159915.SZ)于20210402日买入, 持有56天, 盈利13.24%
-环保ETF(512580.SH)于20210402日买入, 持有56天, 盈利9.98%
-证券ETF(512880.SH)于20210517日买入, 持有11天, 盈利7.13%
-证券分级(502010.SH)于20210517日买入, 持有11天, 盈利7.1%
-德国30(513030.SH)于20210525日买入, 持有3天, 盈利-1.51%
-50AH(501050.SH)于20210526日买入, 持有2天, 盈利-0.06%
-黄金基金(518800.SH)于20210324日买入, 持有65天, 盈利6.21%
+500ETF(510500.SH)于20210401日买入, 持有89天, 盈利8.15%
+创业板(159915.SZ)于20210402日买入, 持有88天, 盈利19.63%
+信息技术(159939.SZ)于20210526日买入, 持有34天, 盈利9.23%
+1000ETF(512100.SH)于20210520日买入, 持有40天, 盈利9.08%
+军工ETF(512660.SH)于20210521日买入, 持有39天, 盈利8.4%
 #########################################
 空仓标的:
-红利ETF(510880.SH)于20210526日卖出, 空仓2天, 空仓期涨幅0.29%
-标普500(513500.SH)于20210513日卖出, 空仓15天, 空仓期涨幅2.3%
-H股ETF(510900.SH)于20210305日卖出, 空仓84天, 空仓期涨幅-6.28%
-恒生ETF(159920.SZ)于20210430日卖出, 空仓28天, 空仓期涨幅0.07%
-中国互联(164906.SZ)于20210513日卖出, 空仓15天, 空仓期涨幅-2.58%
-中概互联(513050.SH)于20210303日卖出, 空仓86天, 空仓期涨幅-17.78%
-纳指ETF(513100.SH)于20210506日卖出, 空仓22天, 空仓期涨幅-0.64%
-纳指ETF(159941.SZ)于20210507日卖出, 空仓21天, 空仓期涨幅-0.92%
+消费ETF(159928.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-1.68%
+医药ETF(159929.SZ)于20210611日卖出, 空仓18天, 空仓期涨幅0.85%
+100红利(515180.SH)于20210622日卖出, 空仓7天, 空仓期涨幅1.03%
+
+
+================Other ETF================
+
+ERROR: cannot get price by ts, the code is 512300.SH and will be skiped...
+
+可买标的:
+中小板(159902.SZ)可买, 收盘价4.861, 11日均线4.737, 22日均线4.732
+#########################################
+可卖标的:
+#########################################
+持仓标的:
+500ETF(510500.SH)于20210401日买入, 持有89天, 盈利8.15%
+创业板(159915.SZ)于20210402日买入, 持有88天, 盈利19.63%
+信息技术(159939.SZ)于20210526日买入, 持有34天, 盈利9.23%
+1000ETF(512100.SH)于20210520日买入, 持有40天, 盈利9.08%
+军工ETF(512660.SH)于20210521日买入, 持有39天, 盈利8.4%
+创业板50(159949.SZ)于20210402日买入, 持有88天, 盈利24.52%
+城投ETF(511220.SH)于20210318日买入, 持有103天, 盈利2.08%
+医药行业(510660.SH)于20210331日买入, 持有90天, 盈利24.8%
+石油基金(160416.SZ)于20210510日买入, 持有50天, 盈利3.54%
+南方原油(501018.SH)于20210603日买入, 持有26天, 盈利5.63%
+华宝油气(162411.SZ)于20210510日买入, 持有50天, 盈利10.05%
+能源ETF(159930.SZ)于20210607日买入, 持有22天, 盈利0.66%
+红利ETF(510880.SH)于20210604日买入, 持有25天, 盈利-0.07%
+富国1000(161039.SZ)于20210524日买入, 持有36天, 盈利8.7%
+环保ETF(512580.SH)于20210402日买入, 持有88天, 盈利27.1%
+标普500(513500.SH)于20210604日买入, 持有25天, 盈利3.0%
+恒生ETF(159920.SZ)于20210625日买入, 持有4天, 盈利-0.98%
+纳指ETF(513100.SH)于20210602日买入, 持有27天, 盈利7.64%
+纳指ETF(159941.SZ)于20210602日买入, 持有27天, 盈利7.89%
+#########################################
+空仓标的:
+消费ETF(159928.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-1.68%
+医药ETF(159929.SZ)于20210611日卖出, 空仓18天, 空仓期涨幅0.85%
+100红利(515180.SH)于20210622日卖出, 空仓7天, 空仓期涨幅1.03%
+金融ETF(159931.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-0.85%
+金融ETF(510230.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-0.89%
+非银ETF(512070.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-0.22%
+可选消费(159936.SZ)于20210616日卖出, 空仓13天, 空仓期涨幅2.79%
+医药ETF(512010.SH)于20210615日卖出, 空仓14天, 空仓期涨幅0.57%
+医药(159938.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅3.53%
+商品ETF(510170.SH)于20210621日卖出, 空仓8天, 空仓期涨幅1.59%
+地产ETF(512200.SH)于20210611日卖出, 空仓18天, 空仓期涨幅-3.16%
+传媒ETF(512980.SH)于20210616日卖出, 空仓13天, 空仓期涨幅-0.5%
+传媒ETF(159805.SZ)于20210622日卖出, 空仓7天, 空仓期涨幅-0.94%
+红利基金(501029.SH)于20210621日卖出, 空仓8天, 空仓期涨幅0.6%
+万家红利(161907.SZ)于20210623日卖出, 空仓6天, 空仓期涨幅0.99%
+银行ETF(512800.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-1.46%
+300ETF(510300.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.25%
+深100ETF(159901.SZ)于20210616日卖出, 空仓13天, 空仓期涨幅5.19%
+180ETF(510180.SH)于20210616日卖出, 空仓13天, 空仓期涨幅1.44%
+证券ETF(512880.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.52%
+证券分级(502010.SH)于20210617日卖出, 空仓12天, 空仓期涨幅1.98%
+德国30(513030.SH)于20210623日卖出, 空仓6天, 空仓期涨幅-1.2%
+50AH(501050.SH)于20210617日卖出, 空仓12天, 空仓期涨幅0.0%
+H股ETF(510900.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.39%
+中国互联(164906.SZ)于20210513日卖出, 空仓47天, 空仓期涨幅-5.84%
+中概互联(513050.SH)于20210615日卖出, 空仓14天, 空仓期涨幅2.35%
+黄金基金(518800.SH)于20210610日卖出, 空仓19天, 空仓期涨幅-4.05%
 ```
 
 > 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 组合表现
 
-![](https://img.bmpi.dev/783874d4-8d93-7bd9-115e-61985b9fbf2a.png)
+![](https://img.bmpi.dev/32a3fc2d-dcdb-126d-3c53-f7704c92f162.png)
 
 > 组合自2018年09月开启至今：
 > 
-> 沪深300自 3310.13 点到 5331.57 点，涨幅 61.06%；
+> 沪深300自 3310.13 点到 5224.04点，涨幅 57.82%；
 > 
-> 香港恒指自 26435.67 点到 29151.8 点，涨幅 10.27%；
+> 香港恒指自 26435.67 点到 28827.95 点，涨幅 9.05%；
 > 
-> 标普指数自 2930.75 点到 4204.11 点，涨幅 43.44%；
+> 标普指数自 2930.75 点到 4297.5 点，涨幅 46.63%；
 > 
-> **本投资组合净值从 1 到 1.561 ,涨幅 56.1%。**
+> **本投资组合净值从 1 到 1.573 ,涨幅 57.3%。**
 ### 组合持仓
 
+![](https://img.bmpi.dev/b335db61-1956-c53f-3199-f6f25773216c.png)
 
-![](https://img.bmpi.dev/dd38a8f2-df24-79f7-3b14-9269936ad60d.png)
+![](https://img.bmpi.dev/6e740363-ec04-25cc-cbac-e378f0c2513e.png)
 
-![](https://img.bmpi.dev/a88ea96a-1598-8b89-e5ec-6e00512c4071.png)
-
-![](https://img.bmpi.dev/31deec30-886e-8358-0619-10f2b471262a.png)
+![](https://img.bmpi.dev/1dd27be1-ca2f-68dc-21ea-a405f7f7148c.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
 
