--- a/content/money/passive-income-protfolio/202106.zh-cn.md
+++ b/content/money/passive-income-protfolio/202106.zh-cn.md
@@ -1,7 +1,7 @@
 ---
-title: "适合趋势跟随策略的指数 # 组合月报(202106)"
+title: "最牛指数 # 组合月报(202106)"
 date: 2021-07-03
-draft: true
+draft: false
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -10,10 +10,10 @@ categories: [
     "被动收入投资组合"
 ]
 isCJKLanguage: true
-og_image: ""
+og_image: "https://img.bmpi.dev/32a3fc2d-dcdb-126d-3c53-f7704c92f162.png"
 ---
 
-## 适合趋势跟随策略的指数
+## 数据分析找最牛指数
 
 以下测试数据区间为 2004 年 01 月 01 日与 2020 年 08 月 01 日之间。使用的交易策略为双均线（11/22）。绿线为复合年化 15% 的收益曲线。
 
@@ -251,7 +251,10 @@ og_image: ""
 ![](https://img.bmpi.dev/7ab3f17d-bdf6-ff83-e128-4937e4a839f2.png)
 
 ![](https://img.bmpi.dev/a8c76233-58bb-9ea6-1e95-ffd916c4731b.png)
+
 ### 双均线策略信号(截止21.06.30交易信号)
+
+根据第一部分数据分析找最牛指数的结果，我把最牛的八个指数放入了双均线策略信号 Long ETF 的部分，方便重点跟踪。
 
 ```
 ================Long ETF=================
@@ -270,12 +273,7 @@ og_image: ""
 消费ETF(159928.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-1.68%
 医药ETF(159929.SZ)于20210611日卖出, 空仓18天, 空仓期涨幅0.85%
 100红利(515180.SH)于20210622日卖出, 空仓7天, 空仓期涨幅1.03%
-
-
 ================Other ETF================
-
-ERROR: cannot get price by ts, the code is 512300.SH and will be skiped...
-
 可买标的:
 中小板(159902.SZ)可买, 收盘价4.861, 11日均线4.737, 22日均线4.732
 #########################################
