--- a/content/money/passive-income-protfolio/202107.zh-cn.md
+++ b/content/money/passive-income-protfolio/202107.zh-cn.md
@@ -53,9 +53,12 @@ og_image: ""
 
 ![](https://img.bmpi.dev/c3325f48-ceaa-ff9e-8377-06a6b455f970.png)
 
-**长期投资，机会不缺，缺的是可持续投入的资金。而这又需要好的仓位管理策略。**
+从上述几个政策影响看：
 
-不过为了防止长期投资中的黑天鹅导致行业出行灭顶之灾，一个可行的策略是**分散投资，长期定投**。
+- 短期上：会引发快速的下跌，之后政府会出一些利好的政策，最终会出现底部区域。这类快速下跌幅度会很大，比如跌幅超过50%，妥妥的熊市节奏。在快速下跌中，因流动性很低，甚至很难卖出。
+- 长期上：根据行业的不同会出现不同的走势，如果政策只是为了防范系统性的风险，比如对中概股的监管及地产行业的三道红线，那长期是利好的，好的行业很快就能破新高，投资这类行业只需要做好**长期投资**的准备就行。如果政策对行业是彻底的禁止，比如这次对教育股的限制，那整个行业里的企业必须要转型才行，否则只有退出这个行业。对这种黑天鹅的风险，投资策略里能做的就是**分散投资**，比如对每个行业指数投资不超过20%。
+
+**长期投资，机会不缺，缺的是可持续投入的资金。而这又需要好的仓位管理策略。**
 
 ## 组合月报
 
