--- a/content/money/passive-income-protfolio/202107.zh-cn.md
+++ b/content/money/passive-income-protfolio/202107.zh-cn.md
@@ -1,7 +1,7 @@
 ---
 title: "护城河还在但城没了 # 组合月报(202107)"
 date: 2021-07-27
-draft: true
+draft: false
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -10,7 +10,7 @@ categories: [
     "被动收入投资组合"
 ]
 isCJKLanguage: true
-og_image: ""
+og_image: "https://img.bmpi.dev/927be80b-663b-8659-7b87-9f675a9a8d5a.png"
 ---
 
 ## 护城河还在但城没了，论国家政策对投资收益的影响
@@ -62,9 +62,9 @@ og_image: ""
 
 ## 组合月报
 
-本月净值：1.573。
+本月净值：1.438。
 
-本月操作：本月买入 0 笔，卖出 0 笔。
+本月操作：本月买入 3笔，卖出 4 笔。
 
 组合详情：投资标的：各类ETF，包括宽基指数、行业指数等；投资市场：中国、香港及美国。
 
@@ -72,112 +72,108 @@ og_image: ""
 
 ### 三地市场分析
 
-![](https://img.bmpi.dev/f560d2dd-64c9-8349-21e8-e961b49074ce.png)
+![](https://img.bmpi.dev/01921178-4dce-1a53-9567-335728fa3ae3.png)
 
-![](https://img.bmpi.dev/7ab3f17d-bdf6-ff83-e128-4937e4a839f2.png)
+![](https://img.bmpi.dev/9cd6199a-0aba-8e18-31e1-72eb87bdfbe5.png)
 
-![](https://img.bmpi.dev/a8c76233-58bb-9ea6-1e95-ffd916c4731b.png)
-
-### 双均线策略信号(截止21.06.30交易信号)
-
-根据第一部分数据分析找最牛指数的结果，我把最牛的八个指数放入了双均线策略信号 Long ETF 的部分，方便重点跟踪。
+![](https://img.bmpi.dev/c1203d52-80da-9e31-f00e-3d8cf6ce2f14.png)
+### 双均线策略信号(截止21.07.31交易信号)
 
 ```
 ================Long ETF=================
 可买标的:
 #########################################
 可卖标的:
+创业板(159915.SZ)可卖, 收盘价3.328, 11日均线3.325, 22日均线3.326
 #########################################
 持仓标的:
-500ETF(510500.SH)于20210401日买入, 持有89天, 盈利8.15%
-创业板(159915.SZ)于20210402日买入, 持有88天, 盈利19.63%
-信息技术(159939.SZ)于20210526日买入, 持有34天, 盈利9.23%
-1000ETF(512100.SH)于20210520日买入, 持有40天, 盈利9.08%
-军工ETF(512660.SH)于20210521日买入, 持有39天, 盈利8.4%
+500ETF(510500.SH)于20210401日买入, 持有120天, 盈利8.73%
+信息技术(159939.SZ)于20210526日买入, 持有65天, 盈利14.19%
+1000ETF(512100.SH)于20210520日买入, 持有71天, 盈利14.05%
+军工ETF(512660.SH)于20210719日买入, 持有11天, 盈利3.17%
 #########################################
 空仓标的:
-消费ETF(159928.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-1.68%
-医药ETF(159929.SZ)于20210611日卖出, 空仓18天, 空仓期涨幅0.85%
-100红利(515180.SH)于20210622日卖出, 空仓7天, 空仓期涨幅1.03%
+消费ETF(159928.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-19.47%
+医药ETF(159929.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-6.65%
+100红利(515180.SH)于20210727日卖出, 空仓3天, 空仓期涨幅0.99%
+
 ================Other ETF================
 可买标的:
-中小板(159902.SZ)可买, 收盘价4.861, 11日均线4.737, 22日均线4.732
 #########################################
 可卖标的:
+创业板(159915.SZ)可卖, 收盘价3.328, 11日均线3.325, 22日均线3.326
+创业板50(159949.SZ)可卖, 收盘价1.528, 11日均线1.522, 22日均线1.523
+红利ETF(510880.SH)可卖, 收盘价2.8, 11日均线2.837, 22日均线2.839
+万家红利(161907.SZ)可卖, 收盘价2.1, 11日均线2.148, 22日均线2.151
 #########################################
 持仓标的:
-500ETF(510500.SH)于20210401日买入, 持有89天, 盈利8.15%
-创业板(159915.SZ)于20210402日买入, 持有88天, 盈利19.63%
-信息技术(159939.SZ)于20210526日买入, 持有34天, 盈利9.23%
-1000ETF(512100.SH)于20210520日买入, 持有40天, 盈利9.08%
-军工ETF(512660.SH)于20210521日买入, 持有39天, 盈利8.4%
-创业板50(159949.SZ)于20210402日买入, 持有88天, 盈利24.52%
-城投ETF(511220.SH)于20210318日买入, 持有103天, 盈利2.08%
-医药行业(510660.SH)于20210331日买入, 持有90天, 盈利24.8%
-石油基金(160416.SZ)于20210510日买入, 持有50天, 盈利3.54%
-南方原油(501018.SH)于20210603日买入, 持有26天, 盈利5.63%
-华宝油气(162411.SZ)于20210510日买入, 持有50天, 盈利10.05%
-能源ETF(159930.SZ)于20210607日买入, 持有22天, 盈利0.66%
-红利ETF(510880.SH)于20210604日买入, 持有25天, 盈利-0.07%
-富国1000(161039.SZ)于20210524日买入, 持有36天, 盈利8.7%
-环保ETF(512580.SH)于20210402日买入, 持有88天, 盈利27.1%
-标普500(513500.SH)于20210604日买入, 持有25天, 盈利3.0%
-恒生ETF(159920.SZ)于20210625日买入, 持有4天, 盈利-0.98%
-纳指ETF(513100.SH)于20210602日买入, 持有27天, 盈利7.64%
-纳指ETF(159941.SZ)于20210602日买入, 持有27天, 盈利7.89%
+500ETF(510500.SH)于20210401日买入, 持有120天, 盈利8.73%
+信息技术(159939.SZ)于20210526日买入, 持有65天, 盈利14.19%
+1000ETF(512100.SH)于20210520日买入, 持有71天, 盈利14.05%
+军工ETF(512660.SH)于20210719日买入, 持有11天, 盈利3.17%
+能源ETF(159930.SZ)于20210726日买入, 持有4天, 盈利0.92%
+商品ETF(510170.SH)于20210706日买入, 持有24天, 盈利13.05%
+富国1000(161039.SZ)于20210524日买入, 持有67天, 盈利13.59%
+环保ETF(512580.SH)于20210402日买入, 持有119天, 盈利40.6%
+证券ETF(512880.SH)于20210722日买入, 持有8天, 盈利-7.05%
+证券分级(502010.SH)于20210722日买入, 持有8天, 盈利-6.17%
+标普500(513500.SH)于20210604日买入, 持有56天, 盈利5.8%
+纳指ETF(513100.SH)于20210602日买入, 持有58天, 盈利10.09%
+纳指ETF(159941.SZ)于20210602日买入, 持有58天, 盈利10.49%
+黄金基金(518800.SH)于20210713日买入, 持有17天, 盈利0.77%
 #########################################
 空仓标的:
-消费ETF(159928.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-1.68%
-医药ETF(159929.SZ)于20210611日卖出, 空仓18天, 空仓期涨幅0.85%
-100红利(515180.SH)于20210622日卖出, 空仓7天, 空仓期涨幅1.03%
-金融ETF(159931.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅-0.85%
-金融ETF(510230.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-0.89%
-非银ETF(512070.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-0.22%
-可选消费(159936.SZ)于20210616日卖出, 空仓13天, 空仓期涨幅2.79%
-医药ETF(512010.SH)于20210615日卖出, 空仓14天, 空仓期涨幅0.57%
-医药(159938.SZ)于20210615日卖出, 空仓14天, 空仓期涨幅3.53%
-商品ETF(510170.SH)于20210621日卖出, 空仓8天, 空仓期涨幅1.59%
-地产ETF(512200.SH)于20210611日卖出, 空仓18天, 空仓期涨幅-3.16%
-传媒ETF(512980.SH)于20210616日卖出, 空仓13天, 空仓期涨幅-0.5%
-传媒ETF(159805.SZ)于20210622日卖出, 空仓7天, 空仓期涨幅-0.94%
-红利基金(501029.SH)于20210621日卖出, 空仓8天, 空仓期涨幅0.6%
-万家红利(161907.SZ)于20210623日卖出, 空仓6天, 空仓期涨幅0.99%
-银行ETF(512800.SH)于20210615日卖出, 空仓14天, 空仓期涨幅-1.46%
-300ETF(510300.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.25%
-深100ETF(159901.SZ)于20210616日卖出, 空仓13天, 空仓期涨幅5.19%
-180ETF(510180.SH)于20210616日卖出, 空仓13天, 空仓期涨幅1.44%
-证券ETF(512880.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.52%
-证券分级(502010.SH)于20210617日卖出, 空仓12天, 空仓期涨幅1.98%
-德国30(513030.SH)于20210623日卖出, 空仓6天, 空仓期涨幅-1.2%
-50AH(501050.SH)于20210617日卖出, 空仓12天, 空仓期涨幅0.0%
-H股ETF(510900.SH)于20210616日卖出, 空仓13天, 空仓期涨幅2.39%
-中国互联(164906.SZ)于20210513日卖出, 空仓47天, 空仓期涨幅-5.84%
-中概互联(513050.SH)于20210615日卖出, 空仓14天, 空仓期涨幅2.35%
-黄金基金(518800.SH)于20210610日卖出, 空仓19天, 空仓期涨幅-4.05%
+消费ETF(159928.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-19.47%
+医药ETF(159929.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-6.65%
+100红利(515180.SH)于20210727日卖出, 空仓3天, 空仓期涨幅0.99%
+金融ETF(159931.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-12.02%
+金融ETF(510230.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.3%
+非银ETF(512070.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-9.74%
+可选消费(159936.SZ)于20210709日卖出, 空仓21天, 空仓期涨幅-5.03%
+医药行业(510660.SH)于20210714日卖出, 空仓16天, 空仓期涨幅-6.14%
+医药ETF(512010.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.11%
+医药(159938.SZ)于20210713日卖出, 空仓17天, 空仓期涨幅-6.96%
+石油基金(160416.SZ)于20210708日卖出, 空仓22天, 空仓期涨幅-4.62%
+南方原油(501018.SH)于20210719日卖出, 空仓11天, 空仓期涨幅2.82%
+华宝油气(162411.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-10.2%
+地产ETF(512200.SH)于20210611日卖出, 空仓49天, 空仓期涨幅-13.85%
+传媒ETF(512980.SH)于20210616日卖出, 空仓44天, 空仓期涨幅-14.62%
+传媒ETF(159805.SZ)于20210622日卖出, 空仓38天, 空仓期涨幅-13.83%
+红利基金(501029.SH)于20210728日卖出, 空仓2天, 空仓期涨幅0.53%
+银行ETF(512800.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.91%
+300ETF(510300.SH)于20210712日卖出, 空仓18天, 空仓期涨幅-5.95%
+中小板(159902.SZ)于20210726日卖出, 空仓4天, 空仓期涨幅-1.87%
+深100ETF(159901.SZ)于20210726日卖出, 空仓4天, 空仓期涨幅-1.71%
+180ETF(510180.SH)于20210616日卖出, 空仓44天, 空仓期涨幅-5.33%
+德国30(513030.SH)于20210623日卖出, 空仓37天, 空仓期涨幅-2.0%
+50AH(501050.SH)于20210617日卖出, 空仓43天, 空仓期涨幅-8.57%
+H股ETF(510900.SH)于20210707日卖出, 空仓23天, 空仓期涨幅-9.61%
+恒生ETF(159920.SZ)于20210708日卖出, 空仓22天, 空仓期涨幅-5.46%
+中国互联(164906.SZ)于20210513日卖出, 空仓78天, 空仓期涨幅-28.04%
+中概互联(513050.SH)于20210708日卖出, 空仓22天, 空仓期涨幅-7.66%
 ```
-
 > 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 组合表现
 
-![](https://img.bmpi.dev/32a3fc2d-dcdb-126d-3c53-f7704c92f162.png)
+![](https://img.bmpi.dev/927be80b-663b-8659-7b87-9f675a9a8d5a.png)
 
 > 组合自2018年09月开启至今：
 > 
-> 沪深300自 3310.13 点到 5224.04点，涨幅 57.82%；
+> 沪深300自 3310.13 点到 4811.17点，涨幅 45.35%；
 > 
-> 香港恒指自 26435.67 点到 28827.95 点，涨幅 9.05%；
+> 香港恒指自 26435.67 点到 25961.03 点，涨幅 -1.79%；
 > 
-> 标普指数自 2930.75 点到 4297.5 点，涨幅 46.63%；
+> 标普指数自 2930.75 点到 4395.26 点，涨幅 49.97%；
 > 
-> **本投资组合净值从 1 到 1.573 ,涨幅 57.3%。**
+> **本投资组合净值从 1 到 1.438 ,涨幅 43.8%。**
 ### 组合持仓
 
-![](https://img.bmpi.dev/b335db61-1956-c53f-3199-f6f25773216c.png)
+![](https://img.bmpi.dev/76597340-0ec3-0480-5c8a-a28ad51e97ad.png)
 
-![](https://img.bmpi.dev/6e740363-ec04-25cc-cbac-e378f0c2513e.png)
+![](https://img.bmpi.dev/bf239cbe-9eb1-a8f9-952d-7760a95372b5.png)
 
-![](https://img.bmpi.dev/1dd27be1-ca2f-68dc-21ea-a405f7f7148c.png)
+![](https://img.bmpi.dev/d8fa7814-9204-6f1e-3ab8-9f9d1c783eb0.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
 
