--- a/content/money/passive-income-protfolio/202108.zh-cn.md
+++ b/content/money/passive-income-protfolio/202108.zh-cn.md
@@ -1,7 +1,7 @@
 ---
 title: "仓位管理是核心 # 组合月报(202108)"
-date: 2021-09-07
-draft: true
+date: 2021-09-11
+draft: false
 series: ["投资实证"]
 tags: ["投资组合", "指数定投", "ETF"]
 keywords: "被动收入投资组合、指数定投、ETF定投"
@@ -10,129 +10,158 @@ categories: [
     "被动收入投资组合"
 ]
 isCJKLanguage: true
-og_image: ""
+og_image: "https://img.bmpi.dev/23794b1e-9315-a745-bd97-d65661347975.png"
 ---
 
 ## 仓位管理是核心
 
-TODO:
+五年过去了，我还没忘记 15 年那次股灾，让很多人包括我产生很大亏损的原因是因为采用了错误的仓位管理策略：倒金字塔加仓法。
+
+![](https://img.bmpi.dev/3253f352-4b2b-4ad8-a629-c80eb70ed3c2.png)
+
+如上图所示，在行情处于不断上升呈现牛市行情里，每次波动的高点会让很多人控制不住想要加仓。牛市行情一般都是不断的创新高，每次暴涨都让参与者后悔没有多买一些，不断的被市场教育后的结果就是很多人在每次上涨创新高时选择投入更多的资金，最终呈现了倒金字塔的仓位管理模型。
+
+倒金字塔的仓位管理模型会导致投资组合的买入成本不断上升，而在下跌时由于没有很大的盈利空间，很容易让组合产生整体亏损，进一步套牢投资者。
+
+一个可持续盈利的投资组合一定拥有合理的仓位管理策略，否则再好的交易策略也无法让投资组合获得成功。假设你有一个胜率与盈亏比都很好的投资策略，但你采用了倒金字塔加仓方法，这让投资组合虽然产生很多次盈利的交易，但最后的几次亏损就能让早期的盈利消失。
+
+我在一个股票投资组合中曾采用了这样的仓位管理策略：
+
+![](https://img.bmpi.dev/road-to-trade.039.png)
+
+这几条仓位管理策略实际上是为了控制单次交易与整个投资组合的最大风险。但实际上它没有解决组合整体加仓的问题，比如每季度我们手头多了一笔可长期投资的资金，现在要入金到整个组合里，这些资金何时买入是个需要考虑的问题。
+
+组合定投方式对这个问题的解法是不解决，通过长期小幅度的加仓来抹平市场短期未知的风险，不得不说这是一种还不错的躺平策略，但它只是适合长期定投的现金流投资模式。
+
+还有一种是通过市场整体估值来判断当前市场的可投资性，如果市场整体估值很高，那就降低组合的持仓，保留更多的现金。但它并没有解决结构性行情的问题，在结构性行情中，市场整体风险不高，但可投资的板块不断的轮动，让加仓变成一件很困难的事情。
+
+我目前的解决方法是通过市场估值来决定组合的杠杆大小。如果市场估值低，可能会考虑加大组合的杠杆，但是一定要注意杠杆的大小要在自己可承受范围内，同时不要采用融资融券这类容易被定向爆破的杠杆。这样组合整体是具备弹性的，在市场低估时投入更多资金，在高估时保留更多现金。
+
+对于投资标的的选择，我会在这篇 [最牛指数](/money/passive-income-protfolio/202106/) 文章中选择出的一些牛指标的池中选择有 [双均线策略交易](/money/passive-income-protfolio/202008/) 机会的标的来交易。
+
+仓位管理是投资成功的核心，这方面我也一直在学习，如果你有更好的想法，欢迎留言与我交流，互相学习。
 
 ## 组合月报
 
-本月净值：1.438。
+本月净值：1.49。
 
-本月操作：本月买入 3笔，卖出 4 笔。
+本月操作：本月买入 1 笔，卖出 0 笔。
 
 组合详情：投资标的：各类ETF，包括宽基指数、行业指数等；投资市场：中国、香港及美国。
 
-资金管理：分散投资，买入标的单个不超过总资金20%，单个标持仓市值不超过总资金30%；高估值标的买入采用非估值买入策略如趋势跟随或突破等交易策略且总市值占比不超过30%；单个高估值标的止损点为10%且总止损额每月不超过总市值2%*30%即0.6%。
+资金管理：分散投资，买入标的单个不超过总资金 20%，单个标持仓市值不超过总资金 30%；高估值标的买入采用非估值买入策略如趋势跟随或突破等交易策略且总市值占比不超过 30%；单个高估值标的止损点为 10% 且总止损额每月不超过总市值 2% * 30% 即 0.6%。
 
 ### 三地市场分析
 
-![](https://img.bmpi.dev/01921178-4dce-1a53-9567-335728fa3ae3.png)
+![](https://img.bmpi.dev/b554372c-6a20-e13e-2990-6e3dec62c46e.png)
 
-![](https://img.bmpi.dev/9cd6199a-0aba-8e18-31e1-72eb87bdfbe5.png)
+![](https://img.bmpi.dev/84e55332-9910-58a3-b5f8-e4b8fa017ed3.png)
 
-![](https://img.bmpi.dev/cf0c4b58-4324-fa02-8725-3a284badc70c.png)
+![](https://img.bmpi.dev/40dd9a4d-cdf1-9eb9-9da4-11434fbf117d.png)
 
-### 双均线策略信号(截止21.07.31交易信号)
+### 双均线策略信号(截止21.08.31交易信号)
 
 ```
 ================Long ETF=================
+
 可买标的:
 #########################################
 可卖标的:
-创业板(159915.SZ)可卖, 收盘价3.328, 11日均线3.325, 22日均线3.326
 #########################################
 持仓标的:
-500ETF(510500.SH)于20210401日买入, 持有120天, 盈利8.73%
-信息技术(159939.SZ)于20210526日买入, 持有65天, 盈利14.19%
-1000ETF(512100.SH)于20210520日买入, 持有71天, 盈利14.05%
-军工ETF(512660.SH)于20210719日买入, 持有11天, 盈利3.17%
+500ETF(510500.SH)于20210811日买入, 持有19天, 盈利2.22%
+1000ETF(512100.SH)于20210520日买入, 持有102天, 盈利21.19%
+军工ETF(512660.SH)于20210719日买入, 持有42天, 盈利18.99%
+100红利(515180.SH)于20210813日买入, 持有17天, 盈利3.55%
 #########################################
 空仓标的:
-消费ETF(159928.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-19.47%
-医药ETF(159929.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-6.65%
-100红利(515180.SH)于20210727日卖出, 空仓3天, 空仓期涨幅0.99%
+消费ETF(159928.SZ)于20210824日卖出, 空仓6天, 空仓期涨幅-1.55%
+医药ETF(159929.SZ)于20210712日卖出, 空仓49天, 空仓期涨幅-14.97%
+创业板(159915.SZ)于20210816日卖出, 空仓14天, 空仓期涨幅-1.31%
+信息技术(159939.SZ)于20210816日卖出, 空仓14天, 空仓期涨幅-2.18%
+
 
 ================Other ETF================
+
+ERROR: cannot get price by ts, the code is 512300.SH and will be skiped...
+
 可买标的:
+环保ETF(512580.SH)可买, 收盘价1.841, 11日均线1.727, 22日均线1.723
 #########################################
 可卖标的:
-创业板(159915.SZ)可卖, 收盘价3.328, 11日均线3.325, 22日均线3.326
-创业板50(159949.SZ)可卖, 收盘价1.528, 11日均线1.522, 22日均线1.523
-红利ETF(510880.SH)可卖, 收盘价2.8, 11日均线2.837, 22日均线2.839
-万家红利(161907.SZ)可卖, 收盘价2.1, 11日均线2.148, 22日均线2.151
+可选消费(159936.SZ)可卖, 收盘价1.933, 11日均线1.961, 22日均线1.963
 #########################################
 持仓标的:
-500ETF(510500.SH)于20210401日买入, 持有120天, 盈利8.73%
-信息技术(159939.SZ)于20210526日买入, 持有65天, 盈利14.19%
-1000ETF(512100.SH)于20210520日买入, 持有71天, 盈利14.05%
-军工ETF(512660.SH)于20210719日买入, 持有11天, 盈利3.17%
-能源ETF(159930.SZ)于20210726日买入, 持有4天, 盈利0.92%
-商品ETF(510170.SH)于20210706日买入, 持有24天, 盈利13.05%
-富国1000(161039.SZ)于20210524日买入, 持有67天, 盈利13.59%
-环保ETF(512580.SH)于20210402日买入, 持有119天, 盈利40.6%
-证券ETF(512880.SH)于20210722日买入, 持有8天, 盈利-7.05%
-证券分级(502010.SH)于20210722日买入, 持有8天, 盈利-6.17%
-标普500(513500.SH)于20210604日买入, 持有56天, 盈利5.8%
-纳指ETF(513100.SH)于20210602日买入, 持有58天, 盈利10.09%
-纳指ETF(159941.SZ)于20210602日买入, 持有58天, 盈利10.49%
-黄金基金(518800.SH)于20210713日买入, 持有17天, 盈利0.77%
+500ETF(510500.SH)于20210811日买入, 持有19天, 盈利2.22%
+1000ETF(512100.SH)于20210520日买入, 持有102天, 盈利21.19%
+军工ETF(512660.SH)于20210719日买入, 持有42天, 盈利18.99%
+100红利(515180.SH)于20210813日买入, 持有17天, 盈利3.55%
+金融ETF(159931.SZ)于20210817日买入, 持有13天, 盈利-2.02%
+金融ETF(510230.SH)于20210817日买入, 持有13天, 盈利-1.24%
+非银ETF(512070.SH)于20210817日买入, 持有13天, 盈利-0.42%
+能源ETF(159930.SZ)于20210726日买入, 持有35天, 盈利16.34%
+商品ETF(510170.SH)于20210706日买入, 持有55天, 盈利34.92%
+地产ETF(512200.SH)于20210816日买入, 持有14天, 盈利-3.25%
+红利基金(501029.SH)于20210812日买入, 持有18天, 盈利1.18%
+红利ETF(510880.SH)于20210817日买入, 持有13天, 盈利6.61%
+万家红利(161907.SZ)于20210812日买入, 持有18天, 盈利3.13%
+银行ETF(512800.SH)于20210818日买入, 持有12天, 盈利-5.84%
+富国1000(161039.SZ)于20210810日买入, 持有20天, 盈利3.99%
+证券ETF(512880.SH)于20210813日买入, 持有17天, 盈利2.41%
+证券分级(502010.SH)于20210813日买入, 持有17天, 盈利3.19%
+标普500(513500.SH)于20210604日买入, 持有87天, 盈利8.88%
+德国30(513030.SH)于20210805日买入, 持有25天, 盈利0.89%
+纳指ETF(513100.SH)于20210602日买入, 持有89天, 盈利15.51%
+纳指ETF(159941.SZ)于20210602日买入, 持有89天, 盈利15.89%
+黄金基金(518800.SH)于20210826日买入, 持有4天, 盈利1.3%
 #########################################
 空仓标的:
-消费ETF(159928.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-19.47%
-医药ETF(159929.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-6.65%
-100红利(515180.SH)于20210727日卖出, 空仓3天, 空仓期涨幅0.99%
-金融ETF(159931.SZ)于20210615日卖出, 空仓45天, 空仓期涨幅-12.02%
-金融ETF(510230.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.3%
-非银ETF(512070.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-9.74%
-可选消费(159936.SZ)于20210709日卖出, 空仓21天, 空仓期涨幅-5.03%
-医药行业(510660.SH)于20210714日卖出, 空仓16天, 空仓期涨幅-6.14%
-医药ETF(512010.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.11%
-医药(159938.SZ)于20210713日卖出, 空仓17天, 空仓期涨幅-6.96%
-石油基金(160416.SZ)于20210708日卖出, 空仓22天, 空仓期涨幅-4.62%
-南方原油(501018.SH)于20210719日卖出, 空仓11天, 空仓期涨幅2.82%
-华宝油气(162411.SZ)于20210712日卖出, 空仓18天, 空仓期涨幅-10.2%
-地产ETF(512200.SH)于20210611日卖出, 空仓49天, 空仓期涨幅-13.85%
-传媒ETF(512980.SH)于20210616日卖出, 空仓44天, 空仓期涨幅-14.62%
-传媒ETF(159805.SZ)于20210622日卖出, 空仓38天, 空仓期涨幅-13.83%
-红利基金(501029.SH)于20210728日卖出, 空仓2天, 空仓期涨幅0.53%
-银行ETF(512800.SH)于20210615日卖出, 空仓45天, 空仓期涨幅-10.91%
-300ETF(510300.SH)于20210712日卖出, 空仓18天, 空仓期涨幅-5.95%
-中小板(159902.SZ)于20210726日卖出, 空仓4天, 空仓期涨幅-1.87%
-深100ETF(159901.SZ)于20210726日卖出, 空仓4天, 空仓期涨幅-1.71%
-180ETF(510180.SH)于20210616日卖出, 空仓44天, 空仓期涨幅-5.33%
-德国30(513030.SH)于20210623日卖出, 空仓37天, 空仓期涨幅-2.0%
-50AH(501050.SH)于20210617日卖出, 空仓43天, 空仓期涨幅-8.57%
-H股ETF(510900.SH)于20210707日卖出, 空仓23天, 空仓期涨幅-9.61%
-恒生ETF(159920.SZ)于20210708日卖出, 空仓22天, 空仓期涨幅-5.46%
-中国互联(164906.SZ)于20210513日卖出, 空仓78天, 空仓期涨幅-28.04%
-中概互联(513050.SH)于20210708日卖出, 空仓22天, 空仓期涨幅-7.66%
+消费ETF(159928.SZ)于20210824日卖出, 空仓6天, 空仓期涨幅-1.55%
+医药ETF(159929.SZ)于20210712日卖出, 空仓49天, 空仓期涨幅-14.97%
+创业板(159915.SZ)于20210816日卖出, 空仓14天, 空仓期涨幅-1.31%
+信息技术(159939.SZ)于20210816日卖出, 空仓14天, 空仓期涨幅-2.18%
+创业板50(159949.SZ)于20210813日卖出, 空仓17天, 空仓期涨幅-2.59%
+医药行业(510660.SH)于20210714日卖出, 空仓47天, 空仓期涨幅-15.46%
+医药ETF(512010.SH)于20210615日卖出, 空仓76天, 空仓期涨幅-19.57%
+医药(159938.SZ)于20210713日卖出, 空仓48天, 空仓期涨幅-14.01%
+石油基金(160416.SZ)于20210820日卖出, 空仓10天, 空仓期涨幅3.73%
+南方原油(501018.SH)于20210806日卖出, 空仓24天, 空仓期涨幅-0.86%
+华宝油气(162411.SZ)于20210712日卖出, 空仓49天, 空仓期涨幅-10.86%
+传媒ETF(512980.SH)于20210826日卖出, 空仓4天, 空仓期涨幅-2.03%
+300ETF(510300.SH)于20210825日卖出, 空仓5天, 空仓期涨幅-1.81%
+中小板(159902.SZ)于20210824日卖出, 空仓6天, 空仓期涨幅-1.5%
+深100ETF(159901.SZ)于20210726日卖出, 空仓35天, 空仓期涨幅-3.68%
+180ETF(510180.SH)于20210825日卖出, 空仓5天, 空仓期涨幅-1.26%
+50AH(501050.SH)于20210617日卖出, 空仓74天, 空仓期涨幅-9.73%
+H股ETF(510900.SH)于20210707日卖出, 空仓54天, 空仓期涨幅-11.51%
+恒生ETF(159920.SZ)于20210708日卖出, 空仓53天, 空仓期涨幅-6.72%
+中国互联(164906.SZ)于20210513日卖出, 空仓109天, 空仓期涨幅-31.3%
+中概互联(513050.SH)于20210708日卖出, 空仓53天, 空仓期涨幅-13.23%
 ```
+
 > 想接受每日ETF指数基金双均线交易信号提醒，可在此订阅: [交易信号邮件提醒](https://money.i365.tech/)
 
 ### 组合表现
 
-![](https://img.bmpi.dev/927be80b-663b-8659-7b87-9f675a9a8d5a.png)
+![](https://img.bmpi.dev/23794b1e-9315-a745-bd97-d65661347975.png)
 
 > 组合自2018年09月开启至今：
 > 
-> 沪深300自 3310.13 点到 4811.17点，涨幅 45.35%；
+> 沪深300自 3310.13 点到 4805.61 点，涨幅 44.1%；
 > 
-> 香港恒指自 26435.67 点到 25961.03 点，涨幅 -1.79%；
+> 香港恒指自 26435.67 点到 25878.99 点，涨幅 -2.1%；
 > 
-> 标普指数自 2930.75 点到 4395.26 点，涨幅 49.97%；
+> 标普指数自 2930.75 点到 4528.79 点，涨幅 56%；
 > 
-> **本投资组合净值从 1 到 1.438 ,涨幅 43.8%。**
+> **本投资组合净值从 1 到 1.49 ,涨幅 49%。**
 
 ### 组合持仓
 
-![](https://img.bmpi.dev/76597340-0ec3-0480-5c8a-a28ad51e97ad.png)
+![](https://img.bmpi.dev/2645a49a-3570-706d-9d18-eff99d24eed5.png)
 
-![](https://img.bmpi.dev/bf239cbe-9eb1-a8f9-952d-7760a95372b5.png)
+![](https://img.bmpi.dev/2041b4c8-dd6a-c0a7-b6b2-8ec0aac1f814.png)
 
-![](https://img.bmpi.dev/d8fa7814-9204-6f1e-3ab8-9f9d1c783eb0.png)
+![](https://img.bmpi.dev/b5af1340-9357-ea78-6381-5f33ee837eb1.png)
 
 关于组合的历史表现详见: [被动收入投资组合](https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea)
 
