fix code highlight guess syntax

--- a/content/money/passive-income-protfolio/202101.zh-cn.md
+++ b/content/money/passive-income-protfolio/202101.zh-cn.md
@@ -14,7 +14,7 @@ isCJKLanguage: true
 
 ## 当别人的股票基金上涨时
 
-```
+```text
 投资最怕的是啥？是你坚守的品种没有涨，而你看不上的品种疯长。
 ```
 
@@ -34,7 +34,7 @@ isCJKLanguage: true
 
 **做交易是与自己内心做斗争，而非与别人做竞争**。所以看到别人晒的持仓品种收益率爆表时，不要过于激动，在没有更多上下文时，我们甚至他自己也不知道这个收益率背后的风险有多么巨大。
 
-```
+```text
 投资是一场马拉松而非百米冲刺。
 ```
 
@@ -64,7 +64,7 @@ isCJKLanguage: true
 
 ### 双均线策略信号(截止21.01.31交易信号)
 
-```
+```text
 可买标的:
 #########################################
 可卖标的:
