--- a/content/money/passive-income-protfolio/202102.zh-cn.md
+++ b/content/money/passive-income-protfolio/202102.zh-cn.md
@@ -59,7 +59,7 @@ og_image: "https://img.bmpi.dev/28a8c22b-f064-8846-2f58-17f3d9749be2.png"
 
 ### 双均线策略信号(截止21.02.28交易信号)
 
-```
+```text
 可买标的:
 地产ETF(512200.SH)可买, 收盘价0.863, 11日均线0.826, 22日均线0.819
 富国1000(161039.SZ)可买, 收盘价1.697, 11日均线1.718, 22日均线1.717
