--- a/content/money/passive-income-protfolio/202103.zh-cn.md
+++ b/content/money/passive-income-protfolio/202103.zh-cn.md
@@ -69,7 +69,7 @@ og_image: "https://img.bmpi.dev/2d2c4058-cb37-fc64-2ffa-8dc21a4d1765.png"
 
 ### 双均线策略信号(截止21.04.05交易信号)
 
-```
+```text
 可买标的:
 消费ETF(159928.SZ)可买, 收盘价5.076, 11日均线4.826, 22日均线4.803
 1000ETF(512100.SH)可买, 收盘价0.9, 11日均线0.892, 22日均线0.89
