--- a/content/money/passive-income-protfolio/202104.zh-cn.md
+++ b/content/money/passive-income-protfolio/202104.zh-cn.md
@@ -62,7 +62,7 @@ og_image: "https://img.bmpi.dev/1d2f4d18-7168-2123-1e61-0fa186ba21b2.png"
 
 ### 双均线策略信号(截止21.04.30交易信号)
 
-```
+```text
 可买标的:
 300ETF(510300.SH)可买, 收盘价5.173, 11日均线5.079, 22日均线5.07
 #########################################
