--- a/content/money/passive-income-protfolio/202105.zh-cn.md
+++ b/content/money/passive-income-protfolio/202105.zh-cn.md
@@ -52,7 +52,7 @@ og_image: "https://img.bmpi.dev/783874d4-8d93-7bd9-115e-61985b9fbf2a.png"
 
 ### 双均线策略信号(截止21.05.31交易信号)
 
-```
+```text
 持仓标的:
 创业板50(159949.SZ)于20210402日买入, 持有56天, 盈利16.24%
 金融ETF(159931.SZ)于20210520日买入, 持有8天, 盈利3.24%
