--- a/content/money/passive-income-protfolio/202106.zh-cn.md
+++ b/content/money/passive-income-protfolio/202106.zh-cn.md
@@ -256,7 +256,7 @@ og_image: "https://img.bmpi.dev/32a3fc2d-dcdb-126d-3c53-f7704c92f162.png"
 
 根据第一部分数据分析找最牛指数的结果，我把最牛的八个指数放入了双均线策略信号 Long ETF 的部分，方便重点跟踪。
 
-```
+```text
 ================Long ETF=================
 可买标的:
 #########################################
