--- a/content/money/passive-income-protfolio/202107.zh-cn.md
+++ b/content/money/passive-income-protfolio/202107.zh-cn.md
@@ -79,7 +79,7 @@ og_image: "https://img.bmpi.dev/927be80b-663b-8659-7b87-9f675a9a8d5a.png"
 ![](https://img.bmpi.dev/cf0c4b58-4324-fa02-8725-3a284badc70c.png)
 ### 双均线策略信号(截止21.07.31交易信号)
 
-```
+```text
 ================Long ETF=================
 可买标的:
 #########################################
