--- a/content/money/passive-income-protfolio/202108.zh-cn.md
+++ b/content/money/passive-income-protfolio/202108.zh-cn.md
@@ -61,7 +61,7 @@ og_image: "https://img.bmpi.dev/23794b1e-9315-a745-bd97-d65661347975.png"
 
 ### 双均线策略信号(截止21.08.31交易信号)
 
-```
+```text
 ================Long ETF=================
 
 可买标的:
