--- a/content/money/passive-income-protfolio/202109.zh-cn.md
+++ b/content/money/passive-income-protfolio/202109.zh-cn.md
@@ -39,7 +39,7 @@ og_image: "https://img.bmpi.dev/e1ce3cfa-c724-42d6-8a28-d322bc70c86c.png"
 
 ### 双均线策略信号(截止 [21.09.30](https://www.i365.tech/invest-alchemy/data/strategy/double-ma/20210930.txt) 交易信号)
 
-```
+```text
 可买标的:
 #########################################
 可卖标的:
