u /self/my-writing-story/250k/

--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -4,9 +4,9 @@ date: 2022-02-24
 draft: false
 tags: ["写作"]
 keywords: ""
-description: "本文分享我的写作经验。"
+description: "写了二十多万字的文章，本文分享我的一些写作经验。"
 isCJKLanguage: true
-og_image: ""
+og_image: "https://img.bmpi.dev/9208f19f-d1b5-2bfd-a6a8-15d6fa9d9cec.png"
 markmap:
   enabled: true
 ---
