u /self/my-writing-story/250k/

--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -141,7 +141,7 @@ markmap:
 
 每当我写作一篇新文章的时候，我会思考新文章的主题是否能与之前写的文章建立联系。这样做有一些好处：
 
-- 文章内容不在孤立，而是一个体系化的内容矩阵，之后方便形成主题写作。
+- 文章内容不再孤立，而是一个体系化的内容矩阵，之后方便形成主题写作。
 - 内容对SEO友好，有联系的文章通过网站内链建立关联。丰富的内链可以降低网站的`跳出率`，提高网站的`平均会话时长`，而这些指标是搜索引擎网站排名的一个参考要素。
 
 ## 写作流程
