u /self/my-writing-story/250k

--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -227,3 +227,14 @@ markmap:
 持续的写作最终会驱动作者走向打造个人品牌的路，关于此我之前有做过一个简单的讲座，想了解可看这个Slide：[从内容创作到个人品牌](https://talk.bmpi.dev/2022/content-marketing-to-personal-brand/)。
 
 以上就是我在写作字数达25万时的一些经验之谈。希望这些文字能帮助你开启自己的写作之路，或者说写作习惯吧。当然这篇文章我也希望在字数达50万甚至100万时能有更多的经验之谈。
+
+### 流量分发对创作的影响
+
+总的来说在平台上创作会受到平台流量分发机制的影响。比如在一个类似抖音的平台上创作，流量大多来自平台的自动推荐，这会引导创作者去追逐热点，制作出大量重复的内容，最终胜利者拿走了绝大部分流量。而在一个类似微信公众号订阅制的平台上，流量的分发大多来自创作者的主动推广或用户的口碑推广，少了对流量的争夺，也会让创作者更多元的去创作。
+
+公开创作不得不考虑流量的影响，我们一方面可以进行独立自主的创作去吸引用户订阅，另外一方面也可以通过在推荐制的平台上进行内容分发，进而获取更多的流量。
+
+## 推荐阅读
+
+- [写作 12 年，我的经验和技巧](https://catcoding.me/p/writing-for-joy/)
+- [Overview of technical writing courses](https://developers.google.com/tech-writing/overview)
