u /self/my-writing-story/250k

--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -47,6 +47,8 @@ markmap:
   - [写作不是笔记](#写作不是笔记)
   - [质量与流量](#质量与流量)
   - [写作与个人品牌](#写作与个人品牌)
+  - [流量分发对创作的影响](#流量分发对创作的影响)
+  - [讲故事是元能力](#讲故事是元能力)
 ```
 
 ## 为何而写
@@ -233,6 +235,14 @@ markmap:
 总的来说在平台上创作会受到平台流量分发机制的影响。比如在一个类似抖音的平台上创作，流量大多来自平台的自动推荐，这会引导创作者去追逐热点，制作出大量重复的内容，最终胜利者拿走了绝大部分流量。而在一个类似微信公众号订阅制的平台上，流量的分发大多来自创作者的主动推广或用户的口碑推广，少了对流量的争夺，也会让创作者更多元的去创作。
 
 公开创作不得不考虑流量的影响，我们一方面可以进行独立自主的创作去吸引用户订阅，另外一方面也可以通过在推荐制的平台上进行内容分发，进而获取更多的流量。
+
+### 讲故事是元能力
+
+人类与动物的一大区别在于对语言与文字的使用，语言与文字是人类文明的基石，也是人类的高科技。写作与演讲就是使用高科技的两种有效途径，这两个技能的不断提高能拓宽我们个体的边界，帮助我们与世界其他的个体建立连接。
+
+如果说语言是高科技，那能讲好故事就是核能力了。讲故事的能力放到写作上就可以写出畅销的书；放到演讲上就可以成为下一个马丁·路德·金；放到编剧上就可以写出精彩的电影；放到短视频上就很容易成为一个网红。所以是个万金油的高科技能力，或者说元能力。
+
+作为一名[长期主义者](/goal/)，把时间投入到元能力的提高上，是[自我提升](/series/自我提升/)的一个好的体现。
 
 ## 推荐阅读
 
