u /self/my-writing-story/250k

--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -247,4 +247,5 @@ markmap:
 ## 推荐阅读
 
 - [写作 12 年，我的经验和技巧](https://catcoding.me/p/writing-for-joy/)
+- [开源软件的技术写作](https://tisonkun.org/2022/05/08/open-source-tech-writing/)
 - [Overview of technical writing courses](https://developers.google.com/tech-writing/overview)
