--- a/content/self/my-writing-story/250k.zh-cn.md
+++ b/content/self/my-writing-story/250k.zh-cn.md
@@ -9,6 +9,9 @@ isCJKLanguage: true
 og_image: "https://img.bmpi.dev/9208f19f-d1b5-2bfd-a6a8-15d6fa9d9cec.png"
 markmap:
   enabled: true
+categories: [
+    "技术写作"
+]
 ---
 
 不知不觉竟已写了超过 25 万字的文章，实际<u title="这里只统计自2016年后博客里的长文">可能更多</u>。一般的长篇小说都是<u title="如大刘的《三体1》字数不到19万字">十几万字以上</u>，所以我竟也在大学毕业后断断续续作文了一部长篇小说的规模。我是怎么做到的？
